2005-05-21  Naba Kumar  <naba@gnome.org>

	* Makefile.am, anjuta.spec.in, configure.in, data/properties/Makefile.am,
	doc/Makefile.am, global-tags/create_global_tags.sh,
	libanjuta/interfaces/Makefile.am.iface: Fixed 64bit arch related bugs
	and rpm package creation. Fixed installation paths.
	
	* plugins/editor/anjuta-document-manager.glade,
	plugins/editor/text_editor.c: Fixed autoformat settings in preferences
	and indent options.
	
	* tagmanager/tm_workspace.c: Fixed code format and compiler warning.

2005-05-21  Naba Kumar  <naba@gnome.org>

	* Makefile.am, configure.in, data/Makefile.am, doc/Makefile.am,
	global-tags/Makefile.am, launcher/Makefile.am, libegg/Makefile.am,
	pixmaps/Makefile.am, scripts/Makefile.am, src/Makefile.am,
	tagmanager/Makefile.am: Fixed paths configure variables to take
	automake configure variables instead of hardcoding.

	* global-tags/tm_global_tags.c: Formated code.

	* manuals/reference/libanjuta/tmpl/e-splash.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-context-list.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-context-text.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-context-tree.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-context.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-renderable.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-sand-box.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-transformable.sgml,
	manuals/reference/libanjuta/tmpl/libanjuta-unused.sgml: Updated.

2005-05-20  Naba Kumar  <naba@gnome.org>

	* README, anjuta.spec.in, configure.in: Updated Anjuta Descriptions
	and fixed rpm spec file (more testing required).
	
	* data/gdb.init: Don't set gdb prompt.
	
	* mime/Makefile.am: run update-mime-data only on system-wide install.
	
	* plugins/gdb/Makefile.am: Install plugin at correct paths.

2005-05-19  Naba Kumar  <naba@gnome.org>

	* plugins/terminal/terminal.c: Fixed crash bug when terminal is used
	while it's not visible.

	Patch from: Jason Bayman  <JBayman@HobbitHell.com>